add inputs search

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <div class="hour"></div>
         <div class="month"></div>
       </div>
+      <div class="main">
+        <input class="citySearch" type="text" value="" /><input
+          class="submitCity"
+          type="button"
+          value="Search"
+        />
+        <div class="resultWeather"></div>
+      </div>
     </div>
   </body>
 </html>
