--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           type="button"
           value="Search"
         />
-        <div class="resultWeather"></div>
+        <div class="weatherComponent">
+          <div class="resultWeather"></div>
+        </div>
       </div>
     </div>
   </body>
