add select option

--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
           type="button"
           value="Search"
         />
+        <select class="daysFuture">
+          <option value="0">Today</option>
+          <option value="1">Tomorrow</option>
+          <option value="2"></option>
+          <option value="3"></option>
+          <option value="4"></option>
+          <option value="5"></option>
+          <option value="6"></option>
+          <option value="7"></option>
+          <option value="8"></option>
+          <option value="9"></option>
+          <option value="10"></option>
+          <option value="11"></option>
+          <option value="12"></option>
+          <option value="13"></option>
+        </select>
         <div class="weatherComponent">
           <div class="resultWeather"></div>
         </div>
