--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
         <div class="month"></div>
       </div>
       <div class="main">
-        <input class="citySearch" type="text" value="" /><input
-          class="submitCity"
-          type="button"
-          value="Search"
-        />
+        <input class="citySearch" type="text" value="" />
+        <input class="submitCity" type="button" value="Search" />
         <select class="daysFuture">
           <option value="0">Today</option>
-          <option value="1">Tomorrow</option>
+          <option value="1"></option>
           <option value="2"></option>
           <option value="3"></option>
           <option value="4"></option>
