--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </div>
       <div class="main">
         <input class="citySearch" type="text" value="" />
-        <input class="submitCity" type="button" value="Search" />
+        <input class="submitCity" type="button" value="Chercher" />
         <select class="daysFuture">
-          <option value="0">Today</option>
+          <option value="0">Aujourd'hui</option>
           <option value="1"></option>
           <option value="2"></option>
           <option value="3"></option>
@@ -35,7 +35,21 @@
           <option value="13"></option>
         </select>
         <div class="weatherComponent">
-          <div class="resultWeather"></div>
+          <div class="resultWeather">
+            <div class="individualCity">
+              <div class="cityName" id="name0">Varaignes</div>
+              <div class="temperature" id="temp0">
+                <div class="tmin">20°C</div>
+                <div class="tmax">32°C</div>
+              </div>
+              <div class="ephemerideComponent" id="ephe0">
+                <div class="sunrise">Aube : 06:26</div>
+                <div class="durationDay">Jour : 15:16</div>
+                <div class="sunset">Crépuscule : 21:42</div>
+                <div class="diffDay">difference : -2 min</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
