--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="weatherComponent">
           <div class="resultWeather">
             <div class="individualCity">
-              <div class="cityName" id="name0">Varaignes</div>
+              <div class="cityName" id="name0">Varaignes (24565)</div>
               <div class="temperature" id="temp0">
                 <div class="tmin">20°C</div>
                 <div class="tmax">32°C</div>
