add plusCity && reset.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Météo</title>
+    <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./app.js"></script>
@@ -42,6 +43,7 @@
                 <div class="tmin">20°C</div>
                 <div class="tmax">32°C</div>
               </div>
+              <input class="plusCity" type="button" value="Plus..." />
               <div class="ephemerideComponent" id="ephe0">
                 <div class="sunrise">Aube : 06:26</div>
                 <div class="durationDay">Jour : 15:16</div>
