plus moins ephemeride button

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 <div class="tmin">20°C</div>
                 <div class="tmax">32°C</div>
               </div>
-              <div class="plusCity">
+              <div class="plusCity" id="button0">
                 <div class="buttonPlus">Plus...</div>
               </div>
-              <div class="plusComponent">
+              <div class="plusComponent invisible" id="plus0">
                 <div class="ephemerideComponent" id="ephe0">
                   <div class="sunrise">Aube : 06:26</div>
                   <div class="durationDay">Jour : 15:16</div>
